--- a/test_fit/pubspec.yaml
+++ b/test_fit/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+
+  # The following adds the english_words package, which contains a few thousand of the most used English words plus some utility functions
+  english_words: ^3.1.5
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
